# wdb-netcdfload

./: .gitignore  Makefile.am  README  configure.ac
config/m4/: googletest.m4  wdb_enable.m4  wdb_fimex.m4
config/mk/: debian.mk
debian/: changelog  control  copyright  rules
debian_files/: changelog  control  copyright  postinst  prerm  rules
doc/: netcdfLoad.mk  netcdfLoad.txt  netcdfLoad.xml
etc/: arome.netcdfload.xml  default.netcdfload.xml  default.xml  eps.netcdfload.xml  eps2probandltf.eps_yr.netcdfload.xml  eps2probandltf.netcdfload.xml  loader.cfg  met.eceps.forecasts.netcdfload.xml  met.no.netcdfload.xml  netcdfLoad.configuration.xsd  netcdfLoad.mk  oceanforecast.xml  vega.netcdfload.xml
m4/: wdb.m4  wdbLoaderBase.m4
mk/: debian.mk
src/: AbstractDataRetriever.h  AbstractNetcdfField.h  CdmLoader.cpp  CdmLoader.h  DataRetriever.cpp  DataRetriever.h  DerivedNetcdfField.cpp  DerivedNetcdfField.h  DirectionConvertingNetcdfField.cpp  DirectionConvertingNetcdfField.h  ForceConvertingNetcdfField.cpp  ForceConvertingNetcdfField.h  NetcdfField.cpp  NetcdfField.h  NetcdfFile.cpp  NetcdfFile.h  NetcdfLoader.cpp  NetcdfLoader.h  NetcdfTranslator.cpp  NetcdfTranslator.h  RawData.h  VariableConversion.cpp  VariableConversion.h  WriteQuery.cpp  WriteQuery.h  localtime.cpp  localtime.h  main.cpp  netcdfLoad.mk
src/configuration/: CdmLoaderConfiguration.cpp  CdmLoaderConfiguration.h  Conversions.h  LoadConfiguration.cpp  LoadConfiguration.h  LoadElement.cpp  LoadElement.h
src/configuration/parameter/: DataSpecification.cpp  DataSpecification.h  NetcdfParameterSpecification.cpp  NetcdfParameterSpecification.h  TimeSpecification.cpp  TimeSpecification.h
test/: NetcdfFieldTest.cpp  NetcdfFileTest.cpp  NetcdfParameterSpecificationTest.cpp  NetcdfTranslatorTest.cpp  TimeSpecificationTest.cpp  netcdfLoad.mk  timeTest.cpp
test/.deps/: netcdfLoadTest-TimeSpecificationTest.Tpo
test/data/: config.xml  test.nc
